# YouTube2Slides

./: .gitignore  CLAUDE.md  README.md  README_STARTUP.md  setup_and_start.bat  setup_and_start.py  start.bat  start.py  start.sh  test_progress.py
.claude/: settings.local.json
backend/: .env.example  app.py  pyproject.toml
backend/models/: schemas.py
backend/services/: ai_outline.py  ai_translator.py  audio_transcription.py  frame_extractor.py  subtitle.py  subtitle_optimizer.py  translator.py  youtube.py
backend/storage/results/: 8XlQn2IAVHo.json  9wkYe5EWIP0.json  D3l1HKVu0dk.json  RDMUhNCwcVo.json  SUysp3sJHbA.json  XDyBDXdDcGE.json  YWjqrLZMOu8.json  _Eq5ndYh3vc.json  c2ce_2tJPxc.json  dQw4w9WgXcQ.json  i_OHQH4-M2Y.json  ob-mYGqqFQw.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/api/: api.js
frontend/src/components/: ProcessingStatus.css  ProcessingStatus.js  Sidebar.css  Sidebar.js  SlideViewer.css  SlideViewer.js  VideoInput.css  VideoInput.js
frontend/src/utils/: historyManager.js  settingsManager.js
